developer/src/kmc-package/test/fixtures/invalid/error_language_tag_is_not_valid.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <Name URL="">SENĆOŦEN (Saanich Dialect) Lexical Model</Name>
    <Copyright URL="">© 2019 National Research Council Canada</Copyright>
    <Author URL="mailto:Eddie.Santos@nrc-cnrc.gc.ca">Eddie Antonio Santos</Author>
    <Version>1.3</Version>
  </Info>
  <Files>
    <File>
      <Name>khmer_angkor.kmx</Name>
      <Description>Keyboard Khmer Angkor</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmx</FileType>
    </File>
  </Files>
  <Keyboards>
    <Keyboard>
      <Name>Khmer Angkor</Name>
      <ID>khmer_angkor</ID>
      <Version>1.3</Version>
      <Languages>
        <!-- ERROR_LanguageTagIsNotValid -->
        <Language ID="en-au-latn">English (Australian script) as spoken in Latin</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
</Package>
